@@ -1,5 +1,10 @@
 2010-07-01  Jared L Jennings  <jaredljennings@gmail.com>
 
+	* LDAPUser.cs:
+	* ATTRNAME.cs: 
+
+2010-07-01  Jared L Jennings  <jaredljennings@gmail.com>
+
 	* LDAP.cs:
 	* LDAPUser.cs:
 	* ATTRNAME.cs: 
